samples/_failures_safe/1761145099_9ca7f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5790712b.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_5790712b.c:158: error: expected ‘{’ at end of input
